<resources>
    <string name="app_name">FCT</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="default_alumno_img">http://luxbranded.com/static/images/users/71-1436214917.png</string>
    <string name="default_empresa_img">https://image.freepik.com/free-icon/set-of-buildings-in-a-city_318-41262.png</string>
    <string name="no_hay_alumnos">No hay alumnos</string>
    <string name="no_hay_empresas">No hay empresas</string>
    <string name="no_hay_visitas">No hay visitas programadas</string>
    <string name="foto_alumno">Foto alumno</string>
    <string name="nombre">Nombre:</string>
    <string name="direccion">Dirección:</string>
    <string name="telefono">Teléfono:</string>
    <string name="edad">Edad:</string>
    <string name="curso">Curso:</string>
    <string name="aceptar">Aceptar</string>
    <string name="nombre_alumno">Nombre de alumno:</string>
    <string name="hora_visita">Hora de visita:</string>
    <string name="fecha">Fecha de visita:</string>
    <string name="sin_comentario">Sin comentario</string>
    <string name="cancelar">Cancelar</string>
    <string name="btn_aceptar">Aceptar</string>
    <string name="sin_empresa_asignada">Sin empresa asignada</string>
    <string name="eliminar">eliminar</string>
    <string name="comentario">Comentario</string>
    <string name="visita_no_realizada">La visita aún no se ha realizado</string>
    <string name="agregar_comentario">Agregar comentario</string>
    <string name="principal">Principal</string>
    <string name="agregar_alumno">Agregar alumno</string>
    <string name="agregar_empresa">Agregar empresa</string>
    <string name="nueva_visita">Programar nueva visita</string>
    <string name="acerca_de">Acerca de...</string>
    <string name="configuracion">Configuración</string>
    <string name="descendente">Descendentemente</string>
    <string name="ordenar_visitas">Ordenar visitas</string>
    <string name="orden_de_visitas">Orden de visitas</string>
    <string name="configuracion_title">Configuración</string>
    <string name="aceptar_btn_acercade">Aceptar</string>
    <string name="info">Información</string>
    <string name="desarrollado_por">"Desarrollado por: Cristina Sola"</string>

    <string-array name="opciones_ordenar_visitas">
        <item>@string/descendente</item>
        <item>Ascendentemente</item>
    </string-array>
</resources>
