<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home"
            android:title="@string/principal" />
        <item
            android:id="@+id/nuevoAlumno"
            android:icon="@drawable/nuevo_alumno"
            android:title="@string/agregar_alumno" />
        <item
            android:id="@+id/nuevaEmpresa"
            android:icon="@drawable/sin_empresa"
            android:title="@string/agregar_empresa" />
        <item
            android:id="@+id/nuevaVisita"
            android:icon="@drawable/ic_today"
            android:title="@string/nueva_visita" />
        <item
            android:id="@+id/configuracion"
            android:icon="@drawable/ic_settings"
            android:title="@string/configuracion" />
        <item
            android:id="@+id/acercaDe"
            android:icon="@drawable/ico_acerca_de"
            android:title="@string/acerca_de" />
    </group>
</menu>
