<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgCabecera"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:contentDescription="@string/foto_alumno"
            android:fitsSystemWindows="true"
            android:scaleType="centerCrop"
            app:layout_collapseMode="parallax"
            app:layout_collapseParallaxMultiplier="0.3" />

        <ImageView
            android:id="@+id/icoPerson"
            android:layout_width="@dimen/ancho_icono"
            android:layout_height="@dimen/alto_icono"
            android:layout_below="@id/imgCabecera"
            android:layout_marginLeft="@dimen/margen_izq_icono"
            android:layout_marginStart="@dimen/margen_izq_icono"
            android:layout_marginTop="@dimen/margen_sup_icono"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_person" />

        <TextView
            android:layout_below="@id/imgCabecera"
            android:id="@+id/txtNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="@dimen/margen_der_txt"
            android:layout_marginLeft="@dimen/margen_izq_txt"
            android:layout_marginRight="@dimen/margen_der_txt"
            android:layout_marginStart="@dimen/margen_izq_txt"
            android:layout_marginTop="@dimen/margin_top_lbl"
            android:layout_toEndOf="@id/icoPerson"
            android:layout_toRightOf="@id/icoPerson"
            android:hint="@string/nombre"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/iconoDireccion"
            android:layout_width="@dimen/ancho_icono"
            android:layout_height="@dimen/alto_icono"
            android:layout_below="@id/icoPerson"
            android:layout_marginLeft="@dimen/margen_izq_icono"
            android:layout_marginStart="@dimen/margen_izq_icono"
            android:layout_marginTop="@dimen/margen_sup_icono"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_home" />

        <TextView
            android:id="@+id/txtDireccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/txtNombre"
            android:layout_marginEnd="@dimen/margen_der_txt"
            android:layout_marginLeft="@dimen/margen_izq_txt"
            android:layout_marginRight="@dimen/margen_der_txt"
            android:layout_marginStart="@dimen/margen_izq_txt"
            android:layout_marginTop="@dimen/margin_top_lbl"
            android:layout_toEndOf="@id/iconoDireccion"
            android:layout_toRightOf="@id/iconoDireccion"
            android:hint="@string/direccion"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/grupo1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtDireccion"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/icoTelefono"
                    android:layout_width="@dimen/ancho_icono"
                    android:layout_height="@dimen/alto_icono"
                    android:layout_marginLeft="@dimen/margen_izq_icono"
                    android:layout_marginStart="@dimen/margen_izq_icono"
                    android:layout_marginTop="@dimen/margen_sup_icono"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_phone" />

                <TextView
                    android:id="@+id/txtTel"
                    android:layout_width="65dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margen_der_txt"
                    android:layout_marginLeft="@dimen/margen_izq_txt"
                    android:layout_marginRight="@dimen/margen_der_txt"
                    android:layout_marginStart="@dimen/margen_izq_txt"
                    android:layout_marginTop="@dimen/margin_top_lbl"
                    android:layout_weight="3"
                    android:hint="@string/telefono"
                    android:maxLength="9"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/icoEdad"
                    android:layout_width="@dimen/ancho_icono"
                    android:layout_height="@dimen/alto_icono"
                    android:layout_marginTop="@dimen/margen_sup_icono"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_mode_edit" />

                <TextView
                    android:id="@+id/txtEdad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margen_der_txt"
                    android:layout_marginLeft="@dimen/margen_izq_txt"
                    android:layout_marginRight="@dimen/margen_der_txt"
                    android:layout_marginStart="@dimen/margen_izq_txt"
                    android:layout_marginTop="@dimen/margin_top_lbl"
                    android:layout_weight="1"
                    android:hint="@string/edad"
                    android:maxLength="3"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/icoCurso"
            android:layout_width="@dimen/ancho_icono"
            android:layout_height="@dimen/alto_icono"
            android:layout_below="@id/grupo1"
            android:layout_marginLeft="@dimen/margen_izq_icono"
            android:layout_marginStart="@dimen/margen_izq_icono"
            android:layout_marginTop="@dimen/margen_sup_icono"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_mode_edit" />

        <TextView
            android:id="@+id/txtCurso"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/grupo1"
            android:layout_marginEnd="@dimen/margen_der_txt"
            android:layout_marginLeft="@dimen/margen_izq_txt"
            android:layout_marginRight="@dimen/margen_der_txt"
            android:layout_marginStart="@dimen/margen_izq_txt"
            android:layout_marginTop="@dimen/margin_top_lbl"
            android:layout_toEndOf="@id/icoCurso"
            android:layout_toRightOf="@id/icoCurso"
            android:hint="@string/curso"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/icoEmpresa"
            android:layout_width="@dimen/ancho_icono"
            android:layout_height="@dimen/alto_icono"
            android:layout_below="@id/icoCurso"
            android:layout_marginLeft="@dimen/margen_izq_icono"
            android:layout_marginStart="@dimen/margen_izq_icono"
            android:layout_marginTop="@dimen/margen_sup_icono"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/lblEmpresa"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/txtCurso"
            android:layout_marginEnd="@dimen/margen_der_txt"
            android:layout_marginLeft="@dimen/margen_izq_txt"
            android:layout_marginRight="@dimen/margen_der_txt"
            android:layout_marginStart="@dimen/margen_izq_txt"
            android:layout_marginTop="@dimen/margin_top_lbl"
            android:layout_toEndOf="@id/icoEmpresa"
            android:layout_toRightOf="@id/icoEmpresa"
            android:textSize="14sp" />

    </RelativeLayout>
</ScrollView>